// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: "foo: >+\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  
=====================================output=====================================
foo: >+
  x

================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  

=====================================output=====================================
foo: >+
  x


================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  
...
=====================================output=====================================
foo: >+
  x

...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  


=====================================output=====================================
foo: >+
  x



================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  

...
=====================================output=====================================
foo: >+
  x


...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  



=====================================output=====================================
foo: >+
  x




================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  


...
=====================================output=====================================
foo: >+
  x



...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
  



...
=====================================output=====================================
foo: >+
  x




...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x

=====================================output=====================================
foo: >+
  x

================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x


=====================================output=====================================
foo: >+
  x


================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x

...
=====================================output=====================================
foo: >+
  x

...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x



=====================================output=====================================
foo: >+
  x



================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x


...
=====================================output=====================================
foo: >+
  x


...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x




=====================================output=====================================
foo: >+
  x




================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x



...
=====================================output=====================================
foo: >+
  x



...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x




...
=====================================output=====================================
foo: >+
  x




...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	
=====================================output=====================================
foo: >+
  x

================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	

=====================================output=====================================
foo: >+
  x


================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	
...
=====================================output=====================================
foo: >+
  x

...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	


=====================================output=====================================
foo: >+
  x



================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	

...
=====================================output=====================================
foo: >+
  x


...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	



=====================================output=====================================
foo: >+
  x




================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	


...
=====================================output=====================================
foo: >+
  x



...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x
	



...
=====================================output=====================================
foo: >+
  x




...
================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  
=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  

=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  
...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  


=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  

...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  



=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  


...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  



...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x

=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x


=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x

...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x



=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x


...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x




=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x



...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x




...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	
=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	

=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	
...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	


=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	

...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	



=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	


...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
	



...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  
=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  

=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  
...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  


=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  

...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  



=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  


...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
  



...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x

=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x


=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x

...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x



=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x


...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x




=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x



...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x




...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	
=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	

=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	
...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	


=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	

...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	



=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	


...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x
	



...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  
=====================================output=====================================
foo: |+
  x

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  

=====================================output=====================================
foo: |+
  x


================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  
...
=====================================output=====================================
foo: |+
  x

...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  


=====================================output=====================================
foo: |+
  x



================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  

...
=====================================output=====================================
foo: |+
  x


...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  



=====================================output=====================================
foo: |+
  x




================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  


...
=====================================output=====================================
foo: |+
  x



...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
  



...
=====================================output=====================================
foo: |+
  x




...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x

=====================================output=====================================
foo: |+
  x

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x


=====================================output=====================================
foo: |+
  x


================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x

...
=====================================output=====================================
foo: |+
  x

...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x



=====================================output=====================================
foo: |+
  x



================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x


...
=====================================output=====================================
foo: |+
  x


...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x




=====================================output=====================================
foo: |+
  x




================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x



...
=====================================output=====================================
foo: |+
  x



...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x




...
=====================================output=====================================
foo: |+
  x




...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	
=====================================output=====================================
foo: |+
  x

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	

=====================================output=====================================
foo: |+
  x


================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	
...
=====================================output=====================================
foo: |+
  x

...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	


=====================================output=====================================
foo: |+
  x



================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	

...
=====================================output=====================================
foo: |+
  x


...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	



=====================================output=====================================
foo: |+
  x




================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	


...
=====================================output=====================================
foo: |+
  x



...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x
	



...
=====================================output=====================================
foo: |+
  x




...
================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  
=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  
...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  


=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  

...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  



=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  


...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  



...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x


=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x

...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x



=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x


...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x




=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x



...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x




...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	
=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	
...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	


=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	

...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	



=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	


...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
	



...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  " format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  
=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  

=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  
...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  


=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  

...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  



=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  


...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n  \\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
  



...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x

=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x


=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x

...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x



=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x


...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x




=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x



...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x




...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	
=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	

=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	
...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	


=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	

...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	



=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	


...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\t\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x
	



...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;
